--- a/page.html
+++ b/page.html
@@ -51,7 +51,66 @@
     </style>
 </head>
 
-<div id="loading-screen" class="hidden w-full h-full fixed top-0 left-0 bottom-0 right-0  z-50">
+<body class="bg-gray-100 min-h-screen">
+    <div class="flex min-h-screen justify-center items-stretch mx-2 md:mx-4">
+        <div class="flex-1 max-w-4xl bg-white min-h-full mx-auto p-4 shadow">
+            <div class="flex justify-center p-2">
+                <img src="https://cdn.jsdelivr.net/gh/izz133/slot-booking/images/skpekansatu-logo.jpg" alt="logo">
+            </div>
+            <div class="flex justify-center p-2">
+              <br><br>
+              <h1 style="font-size:40px">Court A</h1>
+            </div>
+            <div class="my-2 md:my-4 p-4 md:p-8">
+                <div>
+                    <label for="date" class="block text-sm font-medium text-gray-700">
+                        Select Date
+                    </label>
+                    <input type="text" id="date" required
+                        class="mt-1 block w-full border bg-gray-200 border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                </div>
+
+                <div class="mt-4 md:mt-8">
+                    <div id="selectedDate" class="text-center text-2xl md:text-3xl font-medium">
+                    </div>
+                </div>
+
+                <div class="space-y-3 mt-4 px-2" id="timeSlotsCon">
+
+                </div>
+
+                <div id="inpCon" class="hidden mt-4 md:mt-6">
+                    <div class="my-2 md:my-4">
+                        <label for="title" class="block text-sm font-medium text-gray-700">
+                            Event Title
+                        </label>
+                        <input type="text" name="title" id="title" required placeholder="event title"
+                            class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                    </div>
+                    <div class="col-span-full flex justify-center">
+                        <button id="submitBtn" onclick="bookSlot()"
+                            class="bg-indigo-600 border border-transparent rounded-md shadow-sm py-2 px-4 flex justify-center items-center text-md font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                            <span class="hidden">
+                                <svg class="animate-spin -ml-1 mr-3 h-5 w-5 text-white"
+                                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                                    <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor"
+                                        stroke-width="4"></circle>
+                                    <path class="opacity-75" fill="currentColor"
+                                        d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
+                                    </path>
+                                </svg>
+                            </span>
+                            Submit
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
+    <div id="loading-screen" class="hidden w-full h-full fixed top-0 left-0 bottom-0 right-0  z-50">
     <div class="absolute w-full h-full opacity-50 bg-gray-100">
     </div>
     <div class="flex justify-center h-full items-center text-blue-500">
@@ -125,61 +184,6 @@
         </div>
     </div>
 </div>
-
-<body class="bg-gray-100 min-h-screen">
-    <div class="flex min-h-screen justify-center items-stretch mx-2 md:mx-4">
-        <div class="flex-1 max-w-4xl bg-white min-h-full mx-auto p-4 shadow">
-            <div class="flex justify-center p-2">
-                <img src="https://www.baruzotech.com/icon.svg" alt="logo">
-            </div>
-            <div class="my-2 md:my-4 p-4 md:p-8">
-                <div>
-                    <label for="date" class="block text-sm font-medium text-gray-700">
-                        Select Date
-                    </label>
-                    <input type="text" id="date" required
-                        class="mt-1 block w-full border bg-gray-200 border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
-                </div>
-
-                <div class="mt-4 md:mt-8">
-                    <div id="selectedDate" class="text-center text-2xl md:text-3xl font-medium">
-                    </div>
-                </div>
-
-                <div class="space-y-3 mt-4 px-2" id="timeSlotsCon">
-
-                </div>
-
-                <div id="inpCon" class="hidden mt-4 md:mt-6">
-                    <div class="my-2 md:my-4">
-                        <label for="title" class="block text-sm font-medium text-gray-700">
-                            Event Title
-                        </label>
-                        <input type="text" name="title" id="title" required placeholder="event title"
-                            class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
-                    </div>
-                    <div class="col-span-full flex justify-center">
-                        <button id="submitBtn" onclick="bookSlot()"
-                            class="bg-indigo-600 border border-transparent rounded-md shadow-sm py-2 px-4 flex justify-center items-center text-md font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-                            <span class="hidden">
-                                <svg class="animate-spin -ml-1 mr-3 h-5 w-5 text-white"
-                                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
-                                    <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor"
-                                        stroke-width="4"></circle>
-                                    <path class="opacity-75" fill="currentColor"
-                                        d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
-                                    </path>
-                                </svg>
-                            </span>
-                            Submit
-                        </button>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script>
